--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
 				<textarea name="renamings" rows="1" cols="15" placeholder="36 - review"></textarea>
 			</label>
 			<label style='display: block'>
-        <input type="checkbox" name="arrows" value="arrows">
+        <input type="checkbox" name="arrows" value="arrows" checked="checked">
         Arrows
+      </label>
+			<label style='display: block'>
+        <input type="checkbox" name="timetable" value="timetable" checked="checked">
+        Timetable
       </label>
 			<button type="submit">Make</button>
 		</form>
