--- a/www/index.html
+++ b/www/index.html
@@ -51,11 +51,15 @@
 				<textarea name="renamings" rows="1" cols="15" placeholder="36 - review"></textarea>
 			</label>
 			<label style='display: block'>
-        <input type="checkbox" name="arrows" value="arrows" checked="checked">
-        Arrows
+        <input type="checkbox" name="target" value="target" checked="checked">
+        Target (good for calendar, daily focus page)
       </label>
 			<label style='display: block'>
-        <input type="checkbox" name="timetable" value="timetable" checked="checked">
+        <input type="checkbox" name="arrows" value="arrows">
+        Arrows (legacy option, three targets, conflicts with Target option)
+      </label>
+			<label style='display: block'>
+        <input type="checkbox" name="timetable" value="timetable">
         Timetable
       </label>
 			<button type="submit">Make</button>
