--- a/index.html
+++ b/index.html
@@ -64,8 +64,16 @@
         Balance (human faculties page, can be seen as abstract habits page)
       </label>
 			<label style='display: block'>
+        <input type="checkbox" name="square" value="square">
+        Square (pomodoro grid?)
+      </label>
+			<label style='display: block'>
+        <input type="checkbox" name="hal" value="hal">
+        Hal 9000 (review/overview page)
+      </label>
+			<label style='display: block'>
         <input type="checkbox" name="target" value="target">
-        Target (idea for calendar, daily focus page)
+        Target (idea for calendar, daily focus page of a kind)
       </label>
 			<label style='display: block'>
         <input type="checkbox" name="arrows" value="arrows">
