--- a/www/index.html
+++ b/www/index.html
@@ -155,6 +155,53 @@
       <button type="submit" name="action" value="columns_log">Make 3-columns log</button>
     </form>
 
+		<h2>WIP.pdf</h2>
+
+    <p>
+      Own WIP thing.
+      Decyphering key is not included.
+    </p>
+
+    <form onsubmit="window.makeWIP(event)">
+			<label style='display: block'>
+				Header
+				<input
+          name='title'
+          value=""
+          placeholder="Header of every page"
+          type="text"
+        />
+			</label>
+			<label style='display: block'>
+				Line thickness
+				<input
+						name='line_thickness'
+						value="0.5"
+						placeholder="0.5 / 1 / 2"
+						type="text"
+						/>
+			</label>
+			<label style='display: block'>
+				Background grid color
+				<input
+						name='grid_color'
+						value="ffbf00"
+						placeholder="hex rgb format, black is 000000, white is ffffff"
+						type="text"
+						/>
+			</label>
+			<label style='display: block'>
+				Font color
+				<input
+						name='font_color'
+						value="000000"
+						placeholder="hex rgb format, black is 000000, white is ffffff"
+						type="text"
+						/>
+			</label>
+      <button type="submit" name="action">Make WIP</button>
+    </form>
+
 		<script src="./bootstrap.js"></script>
 	</body>
 </html>
