--- a/www/index.html
+++ b/www/index.html
@@ -69,7 +69,11 @@
       </label>
 			<label style='display: block'>
         <input type="checkbox" name="hal" value="hal">
-        Hal 9000 (review/overview page)
+        Hal 9000 (separate focus page with maybe review aspect)
+      </label>
+			<label style='display: block'>
+        <input type="checkbox" name="sink" value="sink">
+        Sink (review page)
       </label>
 			<label style='display: block'>
         <input type="checkbox" name="target" value="target">
