--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>
       There is permanenent revolution of different work in progress or random pdf ideas laying around.
       Default abstract pdf is produced by clicking "Make" button with optionally setting "Header" text field first.
-      More monthly calendar-like version would be produced by unchecking "Empty pages", selecting any one or two of other options and then pressing "Make".
+      More monthly calendar-like version would be produced by unchecking "Empty pages", selecting any one of other options and then pressing "Make".
     </p>
 
 		<h2>Battery.pdf</h2>
@@ -66,8 +66,12 @@
         Timetable (calendar idea with time granularity)
       </label>
 			<label style='display: block'>
+        <input type="checkbox" name="five" value="five">
+        Five (human faculties page, can be seen as abstract habits page)
+      </label>
+			<label style='display: block'>
         <input type="checkbox" name="balance" value="balance">
-        Balance (human faculties page, can be seen as abstract habits page)
+        Balance (previous try, human faculties page, can be seen as abstract habits page)
       </label>
 			<label style='display: block'>
         <input type="checkbox" name="square" value="square">
