--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         Timetable (calendar idea with time granularity)
       </label>
 			<label style='display: block'>
+        <input type="checkbox" name="plus" value="plus">
+        5+5 (no text, context + faculties grid)
+      </label>
+			<label style='display: block'>
         <input type="checkbox" name="five" value="five">
         Five (human faculties page, can be seen as abstract habits page)
       </label>
