--- a/www/index.html
+++ b/www/index.html
@@ -220,7 +220,6 @@
       <button type="submit" name="action">Make Four</button>
     </form>
 
-
 		<h2>WIP.pdf</h2>
 
     <p>
@@ -266,6 +265,53 @@
 						/>
 			</label>
       <button type="submit" name="action">Make WIP</button>
+    </form>
+
+		<h2>Maze.pdf</h2>
+
+    <p>
+      Another experimental idea.
+      Decyphering key is not included.
+    </p>
+
+    <form onsubmit="window.makeMaze(event)">
+			<label style='display: block'>
+				Header
+				<input
+          name='title'
+          value=""
+          placeholder="Header of every page"
+          type="text"
+        />
+			</label>
+			<label style='display: block'>
+				Line thickness
+				<input
+						name='line_thickness'
+						value="0.5"
+						placeholder="0.5 / 1 / 2"
+						type="text"
+						/>
+			</label>
+			<label style='display: block'>
+				Background grid color
+				<input
+						name='grid_color'
+						value="ffbf00"
+						placeholder="hex rgb format, black is 000000, white is ffffff"
+						type="text"
+						/>
+			</label>
+			<label style='display: block'>
+				Font color
+				<input
+						name='font_color'
+						value="000000"
+						placeholder="hex rgb format, black is 000000, white is ffffff"
+						type="text"
+						/>
+			</label>
+      <button type="submit" name="action">Make Maze</button>
     </form>
 
 		<script src="./bootstrap.js"></script>
