--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <pre>
       There is permanenent revolution of different work in progress or random pdf ideas laying around.
 
-      First goes the most recent After Hours inspired todo list - Teeth.pdf; next goes abstract pdf I was experimenting the most with - Battery.pdf.
+      First goes the most recent After Hours inspired todo list - Teeth.pdf;
+      next goes abstract pdf I was experimenting the most with - Battery.pdf.
 
       For the unhinged abstract and questionable todo list just press the "Make Teeth" button below, usage info is near the button.
 
-      The more bland abstract pdf is under Battery.pdf header. It's produced by clicking "Make Battery" button with optionally setting "Header" text field first.
-      More monthly calendar-like version would be produced by unchecking "Empty pages", selecting any one of other options and then pressing "Make".
+      The more bland abstract pdf is under Battery.pdf header.
+      It's produced by clicking "Make Battery" button with optionally setting "Header" text field first.
+      More monthly calendar-like version would be produced by unchecking "Empty pages",
+      selecting any one of other options and then pressing "Make".
     </pre>
 
 		<h2>Teeth.pdf</h2>
@@ -28,9 +31,17 @@
       <br />
       <pre>
       Teeth.pdf is inspired by After Hours and has a room for The Shining too.
-      Main "+" view is a monthly grid with further daily todo lists. "#" view is a maze - place for catchall pages for unrelated ideas, they can be stored in further Δ pages. "-" view starts from the first page of the PDF, it is for higher level content like conception of usage of the PDF, or possibly for review-type notes accumulation, it's the only multi-page entry.
+      Main "+" view is a monthly grid with further daily todo lists.
+      The "#" view is a maze - place for catchall pages for unrelated ideas,
+      they can be stored in further Δ pages.
+      The "-" view starts from the first page of the PDF,
+      it is for higher level content like conception of usage of the PDF,
+      or possibly for review-type notes accumulation, it's the only multi-page entry.
 
-      Below are the settings for Make Teeth; I have gray colored lines by default for Remarkable2, use any hex color code if RM-PRO is the target device, like orange is used for other PDFs below.
+      Below are the settings for Make Teeth;
+      I have gray colored lines by default for Remarkable2,
+      use any hex color code if RM-PRO is the target device,
+      like orange is used for other PDFs below.
       </pre>
 
 			<label style='display: block'>
