--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <pre>
       There is permanenent revolution of different work in progress or random pdf ideas laying around.
 
-      First goes the most recent After Hours inspired todo list - Teeth.pdf;
+      First goes the most recent After Hours inspired todo list - Teeth.pdf,
       next goes abstract pdf I was experimenting the most with - Battery.pdf.
 
       For the unhinged abstract and questionable todo list just press the "Make Teeth" button below, usage info is near the button.
@@ -39,10 +39,27 @@
       or possibly for review-type notes accumulation, it's the only multi-page entry.
 
       Below are the settings for Make Teeth;
+      there is an option to have cryptic review pages (Space Odyssey inspired, WIP);
       I have gray colored lines by default for Remarkable2,
       use any hex color code if RM-PRO is the target device,
       like orange is used for other PDFs below.
       </pre>
+
+			<label style='display: block'>
+				Teeth pages (todo list)
+				<input
+						name='teeth_pages'
+						checked="checked"
+						type="checkbox"
+						/>
+			</label>
+			<label style='display: block'>
+				HAL pages (review)
+				<input
+						name='hal_pages'
+						type="checkbox"
+						/>
+			</label>
 
 			<label style='display: block'>
 				Header
