--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
       or possibly for review-type notes accumulation, it's the only multi-page entry.
 
       Below are the settings for Make Teeth;
-      there is an option to have cryptic review pages (Space Odyssey inspired, WIP);
+      there is an option to have cryptic review pages (Space Odyssey inspired);
       I have gray colored lines by default for Remarkable2,
       use any hex color code if RM-PRO is the target device,
       like orange is used for other PDFs below.
