--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,8 @@
       <br />
       <pre>
       Teeth.pdf is inspired by After Hours and has a room for The Shining too.
-      Main "+" view is a monthly grid with further daily todo lists.
+      Main "+" view is a monthly grid with further daily todo lists
+      (can be Teeth or Sandworm version or can have both depending on selected options).
       The "#" view is a maze - place for catchall pages for unrelated ideas,
       they can be stored in further Δ pages.
       The "-" view starts from the first page of the PDF,
@@ -41,7 +42,7 @@
       Below are the settings for Make Teeth;
       there is an option to have cryptic review pages (Space Odyssey inspired);
 
-      Sandworm PDF:
+      Most recent and new default option is to use Sandworm todo list:
       If "+" page is used like a monthly calendar then you have one Sandworm per day.
       Inside of the Sandworm you have very limited space for todo list, day focus or similar content.
       Outside of it there is clockface with 12 squares to do time planning or accounting.
