--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
       Latest minimalistic and abstract PDF with these kind of pages:
       - circle: scratchpad pages - for all temporary content to not return to, use by entering random invisible link inside the circle
       - "-": title page, squence of pages for content to return to
-      - "+": decomposition into 36 pages, to be used for daily done/todo lists most likely, inside is a square grid with 15 lines, can have own predefined lines for every page (the default configuration goes with numbers at the right)
+      - "+": decomposition into 36 pages, to be used for daily done/todo lists most likely, inside is a square grid with 15 lines, can have own predefined lines for every page (the default configuration goes with numbers for time at the right, and three categories at the left as template for todo list categories, as an example)
       - summary page of a kind with triangle/3D plot idea to try, can be used for three categories of done items or other things to track per day
       </pre>
 
@@ -40,7 +40,7 @@
         Left column (on the day view)
 				<input
 						name='left_column'
-						value=""
+						value="I,,,,,II,,,,,III"
 						placeholder="comma separated things to have at the left on each day page"
 						type="text"
 						/>
