--- a/www/index.html
+++ b/www/index.html
@@ -58,10 +58,18 @@
         Right column (on the day view)
 				<input
 						name='right_column'
-						value="8,9,10,11,12,1,2,3,4"
+						value="7,8,9,10,11,12,1,2,3,4,5,6,7,8,9"
 						placeholder="comma separated things to have at the right on each day page"
 						type="text"
 						/>
+			</label>
+			<label style='display: block'>
+				Renamings of entries
+        <textarea name="renamings" rows="5" cols="15" placeholder="36 - review">32 - w1
+33 - w2
+34 - w3
+35 - w4
+36 - w5</textarea>
 			</label>
 			<label style='display: block'>
 				Line thickness
