--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
       - "-": title page, squence of pages for content to return to
       - "+": decomposition into 36 pages, to be used for daily done/todo lists most likely, inside is a square grid with 15 lines, can have own predefined lines for every page (the default configuration goes with numbers for time at the right, and three categories at the left as template for todo list categories, as an example)
       - summary page of a kind with triangle/3D plot idea to try, can be used for three categories of done items or other things to track per day
+      It goes with predefined settings below, if all text is removed and checkbox is undone then it becomes very abstract pdf for any purpose.
       </pre>
 
 			<label style='display: block'>
@@ -62,6 +63,14 @@
 						placeholder="comma separated things to have at the right on each day page"
 						type="text"
 						/>
+			</label>
+			<label style='display: block'>
+				<input
+						name='saw_right'
+						type="checkbox"
+						checked="checked"
+						/>
+				Saw at the right
 			</label>
 			<label style='display: block'>
 				Renamings of entries
